# FSM-agent-flow

./: CLAUDE.md  README.md  adk_client.py  llm_client.py  pyproject.toml
docs/: LIB_ADK_INTEGRATION.md  LIB_quickref.md  LIB_setup_guide.md  LIB_structure.md  LIB_summary.md  index.html
docs/claude/rules/: adapters.md  tools.md  validation.md  workflows.md
examples/: example.py  example_adk.py  ooda_example.py  research_workflow.py
fsm_agent_flow/: __init__.py  context.py  errors.py  llm_client.py  ooda.py  schema.py  state.py  state_machine.py  summarizer.py  tools.py  validation.py  workflow.py
fsm_agent_flow/editor/: __init__.py  __main__.py  server.py
fsm_agent_flow/editor/static/: editor.js  index.html  litegraph.js  style.css
fsm_agent_flow/llm/: __init__.py  adapter.py  litellm.py  openai.py
src/: __init__.py  memory.py  state_machine.py
tests/: test_editor_server.py  test_example.py  test_ooda.py  test_schema.py  test_tools.py  test_validation.py  test_workflow.py
