[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fsm-agent-flow"
version = "0.2.0"
description = "TDD/OKR-driven agentic workflow framework with verifiable state deliverables"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yuan Xu", email = "dev.source@outlook.com"}
]
keywords = [
    "llm",
    "workflow",
    "agent",
    "fsm",
    "ai",
    "tdd",
    "okr",
    "openai",
    "litellm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
litellm = [
    "litellm>=1.0.0",
]
all = [
    "openai>=1.0.0",
    "litellm>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/NewJerseyStyle/FSM-agent-flow"
Repository = "https://github.com/NewJerseyStyle/FSM-agent-flow"
Issues = "https://github.com/NewJerseyStyle/FSM-agent-flow/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
